# PB-Tracker

./: LICENSE  README.md
.github/workflows/: build-pocketbook.yml  c-cpp.yml
assets/: Reading Stats.app.bmp.base64  ReadingStats.bmp.base64
docs/: build.md  install-pocketbook.txt  product-logic.md
pb-reading-tracker/: CMakeLists.txt  README.md  docker_toolchain.cmake  docker_toolchain_ubuntu.cmake  stdlib_fix.h  toolchain.cmake
pb-reading-tracker/release/: Reading Stats.app
pb-reading-tracker/src/: db.cpp  db.h  i18n.cpp  i18n.h  i18n_wrap.h  main.cpp  metadata.cpp  metadata.h  tracker.cpp  tracker.h
scripts/: build.sh  generate_launcher_icons.py
